# GDSC-DrugBank-Search

./: .gitignore  GDSC Pipeline.drawio  GDSCC Pipeline.drawio  GLMPrediction.py  GLM_variance_prediction_plotting.py  General GDSC presentation.odp  Initial writeup.docx  Initial writeup.odt  Laurence_exploration  Laurence_exploration.py  README.md  RawPlotting.py  cell_line_clustering.py  combination_analysis.py  cross_response_analysis.py  cumulative_frequency_plotter.py  data_handler.py  drug-gene_correlation_histograms.py  drug_gene_correlation_histograms.py  drug_search.py  drugbank_handler.py  initial_exploration.py  localVars.py  logDrugHistograms.txt  logger.py  main.py  modality_analysis.py  pyproject.toml  results_sorter.py  searcher.py  string_score_calculation.py  survivability_correlation_calculation.py  target_analysis.py  target_functions.py  target_sc_analysis.py  temp.txt  testingGLM.py  testout.xml
Laurence-Code/: DeppKi_RankCorr_3.py  DeppKi_corr_allbyall_4.py
